fixed problem with facebook button that was not clickable on portfolio on mobile view.

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ body {
   bottom: 20px;
   position: fixed;
   transition: 0.3s;
+  z-index:3000;
 
 }
 
